hphp/test/zend/good/ext/standard/tests/file/disk_total_space_error.php.skipif
<?hh
<<__EntryPoint>> function main(): void {
if(substr(PHP_OS, 0, 3) == 'WIN')
  die("skip Not valid on Windows");
}
