hphp/test/zend/bad/ext/standard/tests/file/file_get_contents_variation8-win32.php.skipif
<?php
if (substr(PHP_OS, 0, 3) != 'WIN') {
  die("skip Valid only on Windows");
}
?>